--- a/register.html
+++ b/register.html
@@ -17,12 +17,16 @@
                 <input type="text" maxlength="50" placeholder="Password"><br>
                 <input type="text" maxlength="50" placeholder="Email"><br>
             <p style="color:#fff"><br/><strong><em>Are you over 18 years old ?</em></strong></p>
+            <div class="inputYes">
                 <p style="color: white;">Yes</p>
-                <input class="checkEighteenYes" type="checkbox" maxlength="50">
+                <input class="checkEighteenYes" type="radio" maxlength="50">
+            </div>
+            <div class="inputNo">
                 <p style="color: white;">No</p>
-                <input class="checkEighteenNo" type="checkbox" maxlength="50"><br>
+                <input class="checkEighteenNo" type="radio" maxlength="50"><br>
+            </div>
             <button class="submitBtn btn btn-info" type="submit">Register</button>
-        </div>   
+        </div>
     </div>
     <footer class="text-center">
             <nav class="navbar navbar-default navbar-fixed-bottom">
