Big update (started back-end)

--- a/login.html
+++ b/login.html
@@ -13,10 +13,12 @@
 <body>
     <div id="loginBox">
         <div class="iCenter">
-                <input class="username" type="text" maxlength="50" placeholder="Username">
-                <input class="password" type="text" maxlength="50" placeholder="Password"><br>
-            <button class="submitBtn btn btn-info" type="submit">Login</button>
-        </div>   
+            <form>
+            <input class="username" type="text" name="uid" placeholder="Username">
+            <input class="password" type="password" name="pass"  placeholder="Password"><br>
+                <button class="submitBtn btn btn-info" type="submit" name="submit">Login</button>
+            </form>
+        </div>
     </div>
     <footer class="text-center">
             <nav class="navbar navbar-default navbar-fixed-bottom">
