--- a/register.html
+++ b/register.html
@@ -13,19 +13,12 @@
 <body>
     <div id="loginBox">
         <div class="iCenter">
-                <input class="username" type="text" maxlength="50" placeholder="Username">
-                <input type="text" maxlength="50" placeholder="Password"><br>
-                <input type="text" maxlength="50" placeholder="Email"><br>
-            <p style="color:#fff"><br/><strong><em>Are you over 18 years old ?</em></strong></p>
-            <div class="inputYes">
-                <p style="color: white;">Yes</p>
-                <input class="checkEighteenYes" type="radio" maxlength="50">
-            </div>
-            <div class="inputNo">
-                <p style="color: white;">No</p>
-                <input class="checkEighteenNo" type="radio" maxlength="50"><br>
-            </div>
-            <button class="submitBtn btn btn-info" type="submit">Register</button>
+            <form>
+                <input class="username" type="text" name="uid" placeholder="Username">
+                <input type="password" name="pass" placeholder="Password"><br>
+                <input type="text" name="email" placeholder="Email"><br>
+                    <button class="submitBtn btn btn-info" type="submit" name="submit">Register</button>
+            </form>
         </div>
     </div>
     <footer class="text-center">
